Actividad tema 3 Doctrine migrations functions

--- a/src/App/AppBundle/Resources/config/doctrine/Author.orm.yml
+++ b/src/App/AppBundle/Resources/config/doctrine/Author.orm.yml
@@ -15,4 +15,8 @@ App\AppBundle\Entity\Author:
         surname:
             type: string
             length: 255
+        years:
+            type: integer
+        prueba:
+            type: integer
     lifecycleCallbacks: {  }
