--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
         "sensio/distribution-bundle": "~3.0,>=3.0.12",
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "doctrine/doctrine-fixtures-bundle": "2.2.*"
+        "doctrine/doctrine-fixtures-bundle": "2.2.*",
+        "doctrine/doctrine-migrations-bundle": "1.0.*",
+        "doctrine/migrations": "1.0.*@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
