--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -29,6 +29,9 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    globals:
+        contact_name: "raul_club@hotmail.com"
+
 
 # Assetic Configuration
 assetic:
